arr-stack/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: overseerr.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - overseerr.rossreicks.com
    secretName: wildcard-cert-prod-tls
  rules:
    - host: overseerr.rossreicks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-kube
                port:
                  number: 80
